--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/mongoose": "^6.4.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.5.1",
+    "cache-manager": "^3.2.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.0-rc.0",
+    "firebase-admin": "^8.10.0",
     "mongoose": "^5.9.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
