--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
@@ -32,6 +33,7 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.0-rc.0",
     "firebase-admin": "^8.10.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.9.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -45,6 +47,7 @@
     "@types/express": "^4.17.3",
     "@types/hapi__joi": "^16.0.12",
     "@types/jest": "25.1.4",
+    "@types/moment": "^2.13.0",
     "@types/mongoose": "^5.7.8",
     "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
